[tool.poetry]
name = "recsa-cli-docs"
version = "0.1.0"
description = "Documentaion for the RECSA-CLI"
authors = ["neji-craftsman <142223934+neji-craftsman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.8"
mkdocs-static-i18n = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
